--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,259 @@
+absl-py==1.0.0
+adbutils==0.11.0
+aiohttp==3.8.5
+aiosignal==1.3.1
+altgraph==0.17.2
+anyio==3.5.0
+apkutils2==1.0.0
+Appium-Python-Client==2.1.0
+astunparse==1.6.3
+async-generator==1.10
+async-timeout==4.0.2
+asynctest==0.13.0
+attrs==21.2.0
+autopep8==1.6.0
+av==8.1.0
+backcall==0.2.0
+beautifulsoup4==4.10.0
+bidict==0.21.4
+Brotli==1.0.9
+bs4==0.0.1
+cached-property==1.5.2
+cachelib==0.5.0
+cachetools==5.0.0
+cefpython3==66.1
+certifi==2023.7.22
+cffi==1.15.0
+chardet==3.0.4
+charset-normalizer==2.0.8
+cigam==0.0.3
+click==7.1.2
+clickclick==20.10.2
+colorama==0.4.4
+comtypes==1.1.11
+configparser==5.2.0
+connexion==2.13.0
+crayons==0.4.0
+cryptocode==0.1
+cryptography==36.0.0
+cx-Freeze==6.9
+cx-Logging==3.0
+cycler==0.11.0
+cypari==2.4.1
+Cython==0.29.9
+decompyle3==3.8.0
+decorator==5.1.1
+deprecation==2.1.0
+distlib==0.3.7
+dnspython==1.16.0
+docopt==0.6.2
+docutils==0.20.1
+EasyProcess==1.1
+entrypoint2==1.0
+eventlet==0.33.3
+filelock==3.12.2
 Flask==1.1.2
+Flask-Cors==4.0.0
+flask-ngrok==0.0.25
+flask-paginate==2022.1.8
+Flask-Session==0.3.2
+Flask-SocketIO==4.3.1
+flatbuffers==2.0
+fonttools==4.31.2
+frozenlist==1.3.3
+future==0.18.2
+FXrays==1.3.5
+gast==0.5.3
+gitdb==4.0.10
+GitPython==3.1.32
+google-auth==2.6.2
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+greenlet==2.0.2
+grpcio==1.44.0
+h11==0.12.0
+h5py==3.6.0
+htmldocx==0.0.6
+httpcore==0.14.7
+httpx==0.22.0
+iconify==0.0.103
+idna==2.10
+importlib-metadata==6.7.0
+importlib-resources==5.4.0
+imutils==0.5.4
+inflection==0.5.1
+install==1.3.5
+ipython==7.34.0
+itsdangerous==2.0.1
+jedi==0.19.0
+Jinja2==3.0.3
+jsonschema==4.4.0
+keras==2.8.0
+Keras-Preprocessing==1.1.2
+keyboard==0.13.5
+kids.cache==0.0.7
+kivy-deps.angle==0.3.3
+kivy-deps.glew==0.3.1
+kivy-deps.sdl2==0.6.0
+Kivy-Garden==0.1.5
+kiwisolver==1.4.0
+knot-floer-homology==1.2
+libclang==13.0.0
+lxml==4.9.1
+Markdown==3.3.6
+MarkupSafe==2.0.1
+materialyoucolor==1.2.0
+matplotlib==3.5.1
+matplotlib-inline==0.1.3
+MouseInfo==0.1.3
+msedge-selenium-tools==3.141.3
+mss==6.1.0
+multidict==6.0.4
+multivolumefile==0.2.3
+networkx==2.6.3
+numpy==1.21.4
+oauthlib==3.2.0
+openai==0.27.8
+opencv-contrib-python==4.5.5.64
+opencv-python==4.5.5.62
+opt-einsum==3.3.0
+outcome==1.1.0
+packaging==21.3
+pandas==1.3.5
+parso==0.8.3
+paypalrestsdk==1.13.3
+pdf2image==1.17.0
+pefile==2017.9.3
+pickleshare==0.7.5
+Pillow==8.4.0
+pipreqs==0.4.13
+platformdirs==3.10.0
+plink==2.4.1
+plone.rfc822==2.0.2
+prompt-toolkit==3.0.30
+protobuf==3.19.4
+psutil==5.8.0
+py==1.11.0
+py7zr==0.18.1
+pyaes==1.6.1
+pyarmor==7.6.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+PyAutoGUI==0.9.53
+pybcj==0.5.0
+pycodestyle==2.8.0
+pycparser==2.21
+pycryptodomex==3.12.0
+pyelftools==0.27
+pyfiglet==0.8.post1
+pygame==2.1.2
+PyGetWindow==0.0.9
+Pygments==2.16.1
+pyinstaller==5.0
+pyinstaller-hooks-contrib==2021.3
+pymongo==4.6.3
+PyMsgBox==1.0.9
+PyMuPDF==1.22.5
+pynput==1.7.6
+pyOpenSSL==21.0.0
+pyparsing==3.0.6
+PyPDF2==3.0.1
+pyperclip==1.8.2
+pypiwin32==223
+pypng==0.20220715.0
+pyppmd==0.17.4
+PyQt5==5.15.4
+pyqt5-plugins==5.15.4.2.2
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.11.0
+pyqt5-tools==5.15.4.3.2
+PyQtWebEngine==5.15.5
+PyQtWebEngine-Qt5==5.15.2
+PyQtWebKit==5.13.1
+PyRect==0.2.0
+pyrsistent==0.18.1
+pyscreenshot==3.0
+PyScreeze==0.1.28
+pyshine==0.0.9
+PySide6==6.2.2.1
+PySocks==1.7.1
+pystyle==2.9
+pyTelegramBotAPI==4.12.0
+python-dateutil==2.8.2
+python-docx==0.8.11
+python-dotenv==0.21.0
+python-engineio==4.3.1
+python-socketio==5.5.1
+pytweening==1.0.4
+pytz==2022.6
+pywin32==302
+pywin32-ctypes==0.2.0
+PyYAML==6.0
+pyzstd==0.15.2
+QT-PyQt-PySide-Custom-Widgets==0.2.6
+qt5-applications==5.15.2.2.2
+qt5-tools==5.15.2.1.2
+requests==2.31.0
+requests-oauthlib==1.3.1
+retry==0.9.2
+rfc3986==1.5.0
+rsa==4.8
+scrcpy-client==0.3.7
+selenium==4.11.2
+shiboken2==5.15.2
+shiboken6==6.2.2.1
+six==1.16.0
+smmap==5.0.0
+snappy==3.0.3
+snappy-manifolds==1.1.2
+sniffio==1.2.0
+sortedcontainers==2.4.0
+sounddevice==0.4.4
+soupsieve==2.3.1
+spark-parser==1.8.9
+spherogram==2.1
+tabulate==0.8.9
+Telethon @ https://github.com/LonamiWebs/Telethon/archive/master.zip
+tensorboard==2.8.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.8.0
+tensorflow-io-gcs-filesystem==0.24.0
+termcolor==1.1.0
+texttable==1.6.4
+tf-estimator-nightly==2.8.0.dev2021122109
+toml==0.10.2
+tqdm==4.65.0
+traitlets==5.3.0
+trio==0.19.0
+trio-websocket==0.9.2
+typing_extensions==4.7.1
+uncompyle6==2.11.5
+undetected-chromedriver==3.5.1
+unpy2exe==0.3
+urllib3==2.0.4
+virtualenv==20.24.4
+wcwidth==0.2.5
+webdriver-manager==3.5.3
+websocket-client==1.5.1
+websockets==11.0.3
+Werkzeug==2.0.3
+whichcraft==0.6.1
+WMI==1.5.1
+wrapt==1.14.0
+wsproto==1.0.0
+xdis==6.0.3
+xmltodict==0.12.0
+yarg==0.1.9
+yarl==1.9.2
+youtube-dl==2021.12.17
+youtube-search==2.1.0
+youtube-search-python==1.6.2
+zipfile-deflate64==0.2.0
+zipp==3.6.0
+zope.component==5.0.1
+zope.deprecation==4.4.0
+zope.event==4.5.0
+zope.hookable==5.1.0
+zope.interface==5.4.0
+zope.schema==6.2.0
